--- a/index.html
+++ b/index.html
@@ -185,10 +185,13 @@
             <div class="game_btn">
                 <button class="btn_start">GRAJ</button>
             </div>
+            <div class="repeat_btn">
+                <div></div>
+            </div>
 
             <div class="user_1" data-user="1">
                 <div class="kostki kostki_user_1">
-                    <div class="kostka kostka_1 kostka_1_user_1" data-kostka="1">
+                    <div class="kostka kostka_1 kostka_1_user_1" data-kostka="1" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
                         <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
                         <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
@@ -196,7 +199,7 @@
                         <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
                         <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
                     </div>
-                    <div class="kostka kostka_2 kostka_2_user_1" data-kostka="2">
+                    <div class="kostka kostka_2 kostka_2_user_1" data-kostka="2" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
                         <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
                         <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
@@ -204,7 +207,7 @@
                         <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
                         <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
                     </div>
-                    <div class="kostka kostka_3 kostka_3_user_1" data-kostka="3">
+                    <div class="kostka kostka_3 kostka_3_user_1" data-kostka="3" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
                         <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
                         <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
@@ -212,7 +215,7 @@
                         <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
                         <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
                     </div>
-                    <div class="kostka kostka_4 kostka_4_user_1" data-kostka="4">
+                    <div class="kostka kostka_4 kostka_4_user_1" data-kostka="4" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
                         <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
                         <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
@@ -220,7 +223,7 @@
                         <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
                         <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
                     </div>
-                    <div class="kostka kostka_5 kostka_5_user_1" data-kostka="5">
+                    <div class="kostka kostka_5 kostka_5_user_1" data-kostka="5" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
                         <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
                         <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
@@ -232,7 +235,7 @@
             </div>
             <div class="user_2" data-user="2">
                 <div class="kostki kostki_user_2">
-                    <div class="kostka kostka_1 kostka_1_user_2" data-kostka="1">
+                    <div class="kostka kostka_1 kostka_1_user_2" data-kostka="1" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
                         <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
                         <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
@@ -240,7 +243,7 @@
                         <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
                         <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
                     </div>
-                    <div class="kostka kostka_2 kostka_2_user_2" data-kostka="2">
+                    <div class="kostka kostka_2 kostka_2_user_2" data-kostka="2" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
                         <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
                         <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
@@ -248,7 +251,7 @@
                         <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
                         <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
                     </div>
-                    <div class="kostka kostka_3 kostka_3_user_2" data-kostka="3">
+                    <div class="kostka kostka_3 kostka_3_user_2" data-kostka="3" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
                         <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
                         <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
@@ -256,7 +259,7 @@
                         <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
                         <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
                     </div>
-                    <div class="kostka kostka_4 kostka_4_user_2" data-kostka="4">
+                    <div class="kostka kostka_4 kostka_4_user_2" data-kostka="4" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
                         <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
                         <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
@@ -264,7 +267,7 @@
                         <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
                         <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
                     </div>
-                    <div class="kostka kostka_5 kostka_5_user_2" data-kostka="5">
+                    <div class="kostka kostka_5 kostka_5_user_2" data-kostka="5" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
                         <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
                         <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
@@ -274,7 +277,94 @@
                     </div>
                 </div>
             </div>
-
+            <div class="user_3" data-user="3">
+                <div class="kostki kostki_user_3">
+                    <div class="kostka kostka_1 kostka_1_user_3" data-kostka="1" data-save="false">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_2 kostka_2_user_3" data-kostka="2" data-save="false">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_3 kostka_3_user_3" data-kostka="3" data-save="false">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_4 kostka_4_user_3" data-kostka="4" data-save="false">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_5 kostka_5_user_3" data-kostka="5" data-save="false">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                </div>
+            </div>
+            <div class="user_4" data-user="4">
+                <div class="kostki kostki_user_4">
+                    <div class="kostka kostka_1 kostka_1_user_4" data-kostka="1" data-save="false">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_2 kostka_2_user_4" data-kostka="2" data-save="false">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_3 kostka_3_user_4" data-kostka="3" data-save="false">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_4 kostka_4_user_4" data-kostka="4" data-save="false">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_5 kostka_5_user_4" data-kostka="5" data-save="false">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                </div>
+            </div>
 
         </div>
 
