--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     <div class="settings_box">
         <ul class="setting_list">
             <li class="settings_item item_hover" data-item="item1"></li>
-            <li class="settings_item item_hover" data-item="item2"></li>
             <li class="settings_item item_click"></li>
         </ul>
 
@@ -57,121 +56,121 @@
     <div class="game">
 
         <div class="tabela">
-            <table>
+            <table class="table_main">
                 <tr class="users">
                     <td class="empty"></td>
-                    <td class="user-1 user"  data-user="1">Gracz #1</td>
-                    <td class="user-2 user"  data-user="2">Gracz #2</td>
-                    <td class="user-3 user"  data-user="3">Gracz #3</td>
-                    <td class="user-4 user"  data-user="4">Gracz #4</td>
+                    <td class="user-1 user"  data-user="1"></td>
+                    <td class="user-2 user"  data-user="2"></td>
+                    <td class="user-3 user"  data-user="3"></td>
+                    <td class="user-4 user"  data-user="4"></td>
                 </tr>
                 <tr class="jedynki">
-                    <td>jedynki</td>
+                    <td class="cat_name"></td>
                     <td class="points" data-cat="jedynki" data-player="1"></td>
                     <td class="points" data-cat="jedynki" data-player="2"></td>
                     <td class="points" data-cat="jedynki" data-player="3"></td>
                     <td class="points" data-cat="jedynki" data-player="4"></td>
                 </tr>
                 <tr class="dwojki">
-                    <td>dwójki</td>
+                    <td class="cat_name"></td>
                     <td class="points" data-cat="dwojki" data-player="1"></td>
                     <td class="points" data-cat="dwojki" data-player="2"></td>
                     <td class="points" data-cat="dwojki" data-player="3"></td>
                     <td class="points" data-cat="dwojki" data-player="4"></td>
                 </tr>
                 <tr class="trojki">
-                    <td>trójki</td>
+                    <td class="cat_name"></td>
                     <td class="points" data-cat="trojki" data-player="1"></td>
                     <td class="points" data-cat="trojki" data-player="2"></td>
                     <td class="points" data-cat="trojki" data-player="3"></td>
                     <td class="points" data-cat="trojki" data-player="4"></td>
                 </tr>
                 <tr class="czworki">
-                    <td>czwórki</td>
+                    <td class="cat_name"></td>
                     <td class="points" data-cat="czworki" data-player="1"></td>
                     <td class="points" data-cat="czworki" data-player="2"></td>
                     <td class="points" data-cat="czworki" data-player="3"></td>
                     <td class="points" data-cat="czworki" data-player="4"></td>
                 </tr>
                 <tr class="piatki">
-                    <td>piątki</td>
+                    <td class="cat_name"></td>
                     <td class="points" data-cat="piatki" data-player="1"></td>
                     <td class="points" data-cat="piatki" data-player="2"></td>
                     <td class="points" data-cat="piatki" data-player="3"></td>
                     <td class="points" data-cat="piatki" data-player="4"></td>
                 </tr>
                 <tr class="szostki">
-                    <td>szóstki</td>
+                    <td class="cat_name"></td>
                     <td class="points" data-cat="szostki" data-player="1"></td>
                     <td class="points" data-cat="szostki" data-player="2"></td>
                     <td class="points" data-cat="szostki" data-player="3"></td>
                     <td class="points" data-cat="szostki" data-player="4"></td>
                 </tr>
                 <tr class="sumax1">
-                    <td>suma</td>
+                    <td class="cat_name"></td>
                     <td class="sumax1" data-cat="sumax1" data-player="1"></td>
                     <td class="sumax1" data-cat="sumax1" data-player="2"></td>
                     <td class="sumax1" data-cat="sumax1" data-player="3"></td>
                     <td class="sumax1" data-cat="sumax1" data-player="4"></td>
                 </tr>
                 <tr class="3x">
-                    <td>trzy jednakowe</td>
+                    <td class="cat_name"></td>
                     <td class="points" data-cat="trzyx" data-player="1"></td>
                     <td class="points" data-cat="trzyx" data-player="2"></td>
                     <td class="points" data-cat="trzyx" data-player="3"></td>
                     <td class="points" data-cat="trzyx" data-player="4"></td>
                 </tr>
                 <tr class="4x">
-                    <td>cztery jednakowe</td>
+                    <td class="cat_name"></td>
                     <td class="points" data-cat="czteryx" data-player="1"></td>
                     <td class="points" data-cat="czteryx" data-player="2"></td>
                     <td class="points" data-cat="czteryx" data-player="3"></td>
                     <td class="points" data-cat="czteryx" data-player="4"></td>
                 </tr>
                 <tr class="full">
-                    <td>full</td>
+                    <td class="cat_name"></td>
                     <td class="points" data-cat="full" data-player="1"></td>
                     <td class="points" data-cat="full" data-player="2"></td>
                     <td class="points" data-cat="full" data-player="3"></td>
                     <td class="points" data-cat="full" data-player="4"></td>
                 </tr>
                 <tr class="maly">
-                    <td>mały strit</td>
+                    <td class="cat_name"></td>
                     <td class="points" data-cat="maly" data-player="1"></td>
                     <td class="points" data-cat="maly" data-player="2"></td>
                     <td class="points" data-cat="maly" data-player="3"></td>
                     <td class="points" data-cat="maly" data-player="4"></td>
                 </tr>
                 <tr class="duzy">
-                    <td>duży strit</td>
+                    <td class="cat_name"></td>
                     <td class="points" data-cat="duzy" data-player="1"></td>
                     <td class="points" data-cat="duzy" data-player="2"></td>
                     <td class="points" data-cat="duzy" data-player="3"></td>
                     <td class="points" data-cat="duzy" data-player="4"></td>
                 </tr>
                 <tr class="general">
-                    <td>generał</td>
+                    <td class="cat_name"></td>
                     <td class="points" data-cat="general" data-player="1"></td>
                     <td class="points" data-cat="general" data-player="2"></td>
                     <td class="points" data-cat="general" data-player="3"></td>
                     <td class="points" data-cat="general" data-player="4"></td>
                 </tr>
                 <tr class="szansa">
-                    <td>szansa</td>
+                    <td class="cat_name"></td>
                     <td class="points" data-cat="szansa" data-player="1"></td>
                     <td class="points" data-cat="szansa" data-player="2"></td>
                     <td class="points" data-cat="szansa" data-player="3"></td>
                     <td class="points" data-cat="szansa" data-player="4"></td>
                 </tr>
                 <tr class="sumax2">
-                    <td>suma</td>
+                    <td class="cat_name"></td>
                     <td class="sumax2" data-cat="sumax2" data-player="1"></td>
                     <td class="sumax2" data-cat="sumax2" data-player="2"></td>
                     <td class="sumax2" data-cat="sumax2" data-player="3"></td>
                     <td class="sumax2" data-cat="sumax2" data-player="4"></td>
                 </tr>
                 <tr class="razem">
-                    <td>razem</td>
+                    <td class="cat_name"></td>
                     <td class="razem" data-cat="razem" data-player="1"></td>
                     <td class="razem" data-cat="razem" data-player="2"></td>
                     <td class="razem" data-cat="razem" data-player="3"></td>
@@ -182,14 +181,22 @@
 
         <div class="gracze">
 
+            <div class="Turn">
+                <h1 class="Turn_h"></h1>
+                <h1 class="Turn_u"></h1>
+            </div>
+
             <div class="game_btn">
-                <button class="btn_start">GRAJ</button>
+                <button class="btn_start"></button>
             </div>
             <div class="repeat_btn">
                 <div></div>
             </div>
 
             <div class="user_1" data-user="1">
+                <div class="header">
+                    <h1 class="header_h1"></h1>
+                </div>
                 <div class="kostki kostki_user_1">
                     <div class="kostka kostka_1 kostka_1_user_1" data-kostka="1" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
@@ -234,6 +241,9 @@
                 </div>
             </div>
             <div class="user_2" data-user="2">
+                <div class="header">
+                    <h1 class="header_h1"></h1>
+                </div>
                 <div class="kostki kostki_user_2">
                     <div class="kostka kostka_1 kostka_1_user_2" data-kostka="1" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
@@ -278,6 +288,9 @@
                 </div>
             </div>
             <div class="user_3" data-user="3">
+                <div class="header">
+                    <h1 class="header_h1"></h1>
+                </div>
                 <div class="kostki kostki_user_3">
                     <div class="kostka kostka_1 kostka_1_user_3" data-kostka="1" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
@@ -322,6 +335,9 @@
                 </div>
             </div>
             <div class="user_4" data-user="4">
+                <div class="header">
+                    <h1 class="header_h1"></h1>
+                </div>
                 <div class="kostki kostki_user_4">
                     <div class="kostka kostka_1 kostka_1_user_4" data-kostka="1" data-save="false">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
@@ -370,7 +386,10 @@
 
     </div>
 
-
+    <div class="History">
+        <div class="list">
+        </div>
+    </div>
 
 
 <!-- scripts -->
